--- a/app/design/frontend/zarpo/default/layout/local.xml
+++ b/app/design/frontend/zarpo/default/layout/local.xml
@@ -32,6 +32,23 @@
 
     <cms_index_index translate="label">
         <label>CMS Home Page</label>
+        <reference name="head">
+            <action method="addItem" ><type>skin_js</type><name>vendor/jquery/jquery.min.js</name></action>
+            <action method="addItem" ><type>skin_js</type><name>vendor/jquery/noconflict.js</name></action>
+            <action method="addItem" ><type>skin_js</type><name>vendor/jquery/migrate.min.js</name></action>
+            <action method="addItem" ><type>skin_js</type><name>vendor/popper/popper.min.js</name></action>                
+            <action method="addItem" ><type>skin_js</type><name>vendor/bootstrap/js/bootstrap.min.js</name></action>
+            <action method="addItem" ><type>skin_css</type><name>vendor/bootstrap/css/bootstrap.min.css</name></action>
+
+            <action method="removeItem"><type>js</type><name>lib/jquery/jquery-1.12.1.min.js</name></action>
+            <action method="removeItem"><type>js</type><name>lib/jquery/noconflict.js</name></action>
+
+            <action method="removeItem"><type>skin_css</type><name>css/styles-ie8.css</name></action>
+            <action method="removeItem"><type>skin_css</type><name>css/madisonisland-ie8.css</name></action>
+
+            <action method="removeItem"><type>skin_css</type><name>css/styles.css</name></action>
+            <action method="removeItem"><type>skin_css</type><name>css/madisonisland.css</name></action>
+        </reference>
         <reference name="content">
             <block type="core/template" name="restrict" template="home/restrict.phtml" />
         </reference>
