--- a/app/design/frontend/zarpo/default/layout/local.xml
+++ b/app/design/frontend/zarpo/default/layout/local.xml
@@ -27,28 +27,36 @@
 -->
 <layout version="0.1.0">
     <default>
-        <!-- Configuration -->
+            <remove name="right.poll"/> <!--remove enquete do lado direito-->
+            <remove name="right.permanent.callout"/> <!--remove banner do lado direito-->
+            <remove name="left.permanent.callout"/> <!--remove banner do lado esquerdo-->
+            <remove name="paypal.partner.right.logo"/> <!--remove banner do paypall-->
+            <remove name="top.search"/>
+            <remove name="footer.newsletter"/>
     </default>
 
     <cms_index_index translate="label">
         <label>CMS Home Page</label>
+
+        <reference name="root">
+            <action method="setTemplate"><template>page/1column.phtml</template></action>
+        </reference>
+
         <reference name="head">
+            <action method="addItem" ><type>skin_css</type><name>vendor/bootstrap/css/bootstrap.min.css</name></action>                        
+            <action method="addItem" ><type>skin_css</type><name>js/local.css</name></action>
+            
             <action method="addItem" ><type>skin_js</type><name>vendor/jquery/jquery.min.js</name></action>
             <action method="addItem" ><type>skin_js</type><name>vendor/jquery/noconflict.js</name></action>
             <action method="addItem" ><type>skin_js</type><name>vendor/jquery/migrate.min.js</name></action>
             <action method="addItem" ><type>skin_js</type><name>vendor/popper/popper.min.js</name></action>                
             <action method="addItem" ><type>skin_js</type><name>vendor/bootstrap/js/bootstrap.min.js</name></action>
-            <action method="addItem" ><type>skin_css</type><name>vendor/bootstrap/css/bootstrap.min.css</name></action>
 
             <action method="removeItem"><type>js</type><name>lib/jquery/jquery-1.12.1.min.js</name></action>
             <action method="removeItem"><type>js</type><name>lib/jquery/noconflict.js</name></action>
-
-            <action method="removeItem"><type>skin_css</type><name>css/styles-ie8.css</name></action>
-            <action method="removeItem"><type>skin_css</type><name>css/madisonisland-ie8.css</name></action>
-
-            <action method="removeItem"><type>skin_css</type><name>css/styles.css</name></action>
-            <action method="removeItem"><type>skin_css</type><name>css/madisonisland.css</name></action>
+            <action method="addItem" ><type>skin_js</type><name>js/local.js</name></action>
         </reference>
+        
         <reference name="content">
             <block type="core/template" name="restrict" template="home/restrict.phtml" />
         </reference>
