Removi arquivos js desnecessarios no momento

--- a/app/design/frontend/zarpo/default/layout/local.xml
+++ b/app/design/frontend/zarpo/default/layout/local.xml
@@ -44,7 +44,7 @@
 
         <reference name="head">
             <action method="addItem" ><type>skin_css</type><name>vendor/bootstrap/css/bootstrap.min.css</name></action>                        
-            <action method="addItem" ><type>skin_css</type><name>js/local.css</name></action>
+            <action method="addItem" ><type>skin_css</type><name>css/local.css</name></action>
             
             <action method="addItem" ><type>skin_js</type><name>vendor/jquery/jquery.min.js</name></action>
             <action method="addItem" ><type>skin_js</type><name>vendor/jquery/noconflict.js</name></action>
@@ -54,6 +54,12 @@
 
             <action method="removeItem"><type>js</type><name>lib/jquery/jquery-1.12.1.min.js</name></action>
             <action method="removeItem"><type>js</type><name>lib/jquery/noconflict.js</name></action>
+            <action method="removeItem"><type>skin_js</type><name>js/app.js</name></action>
+            <action method="removeItem"><type>skin_js</type><name>js/lib/jquery.cycle2.min.js</name></action>
+            <action method="removeItem"><type>skin_js</type><name>js/lib/jquery.cycle2.swipe.min.js</name></action>
+            <action method="removeItem"><type>skin_js</type><name>js/slideshow.js</name></action>
+
+
             <action method="addItem" ><type>skin_js</type><name>js/local.js</name></action>
         </reference>
         
