Consegui incluir o formulário no rodapé. \o/

--- a/app/design/frontend/zarpo/default/layout/local.xml
+++ b/app/design/frontend/zarpo/default/layout/local.xml
@@ -66,6 +66,11 @@
         </reference>
     </cms_index_index>
 
+    <customer_logged_out>
+        <reference name="footer">
+            <block type="customer/form_login" name="footer_customer_form_mini_login" template="customer/form/mini.login.phtml"/>
+        </reference>
+    </customer_logged_out>
 </layout>
 
 
