--- a/app/design/frontend/zarpo/default/template/page/html/footer.phtml
+++ b/app/design/frontend/zarpo/default/template/page/html/footer.phtml
@@ -24,28 +24,16 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-        
+<div class="footer-container">
+    <div class="footer">
+        <?php echo $this->getChildHtml() ?>
+        <address class="copyright"><?php echo $this->getCopyright() ?></address>
+    </div>
+</div>
 
 <!-- Modal Login -->
-<div class="modal fade" id="modalLogin">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-      <?php echo $this->getChildHtml('footer_oauth_authorize_login') ?>
-      </div>
-    </div>
-  </div>
-</div>
-<script>
-  jQuery(function(){
-    jQuery('#modalLogin').modal('show')
-  })
-</script>
+<?php echo $this->getChildHtml('footer_oauth_authorize_login') ?>
+
 
 
 
