--- a/app/design/frontend/zarpo/default/template/oauth/authorize/form/login-simple.phtml
+++ b/app/design/frontend/zarpo/default/template/oauth/authorize/form/login-simple.phtml
@@ -30,47 +30,50 @@
  * @var $this Mage_Oauth_Block_Authorize
  */
 ?>
-<div class="content-container">
-    <div class="login-box">
-        <div class="page-title">
-            <h1><?php echo $this->__('Log In') ?></h1>
-        </div>
-        <div class="form-box">
+<div class="modal fade" id="modalLogin">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalLoginTitle"><?php echo $this->__('Log In') ?></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
             <?php echo $this->getMessagesBlock()->toHtml() ?>
             <?php if (!$this->getHasException()) : ?>
-            <form method="post" action="<?php echo $this->getPostActionUrl() ?>" id="loginForm">
-                <?php echo $this->getBlockHtml('formkey'); ?>
-                <div class="fieldset" class="fieldset">
-                    <h2 class="legend"><?php echo $this->getFormTitle() ?></h2>
-                    <p class="description"><?php echo $this->__('Log in to use <strong>%s</strong>', $this->getConsumer()->getName()) ?></p>
-                    <div class="login-form simple">
-                            <input type="hidden" name="oauth_token" value="<?php echo $this->escapeHtml($this->getToken()) ?>"/>
-                            <div class="input-box input-left">
-                                <label for="username">
-                                    <em class="required">*</em>&nbsp;<?php echo $this->getIdentityLabel(); ?>
-                                </label>
-                                <input type="text" id="username" name="login[username]" value="" class="required-entry input-text"/>
-                            </div>
-                            <div class="clear"></div>
-                            <div class="input-box input-right">
-                                <label for="login">
-                                    <em class="required">*</em>&nbsp;<?php echo $this->__('Password') ?>
-                                </label>
-                                <input type="password" id="login" name="login[password]" class="required-entry input-text"
-                                       value=""/></div>
-                            <div class="clear"></div>
-                            <div class="form-buttons">
-                                <button type="submit" class="form-button"
-                                       title="<?php echo $this->quoteEscape($this->__('Login')) ?>"/><?php echo $this->__('Login') ?></button>
-                                <button type="button" onclick="document.location.href='<?php echo $this->getRejectUrl(); ?>';"
-                                        title="<?php echo $this->quoteEscape($this->__('Reject')) ?>"><?php echo $this->__('Reject') ?></button>
-                                <p class="required"><?php echo $this->__('* Required Fields') ?></p>
-                            </div>
-                        </div>
+                <form method="post" action="<?php echo $this->getPostActionUrl() ?>" id="loginForm">
+                    <?php echo $this->getBlockHtml('formkey'); ?>
+                    <h2 class="legend hidden"><?php echo $this->getFormTitle() ?></h2>                
+                    <input type="hidden" name="oauth_token" value="<?php echo $this->escapeHtml($this->getToken()) ?>"/>
+                    
+                    <div class="form-group">
+                        <label for="username">
+                            <em class="text-danger">*</em>&nbsp;<?php echo $this->getIdentityLabel(); ?>
+                        </label>
+                        <input type="text" id="username" name="login[username]" value="" class="required-entry form-control w-100"/>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="login">
+                            <em class="text-danger">*</em>&nbsp;<?php echo $this->__('Password') ?>
+                        </label>
+                        <input type="password" id="login" name="login[password]" class="required-entry form-control w-100" value=""/>
+                    </div>
+
+                    <div class="form-group text-right">
+                        <button type="submit" class="btn btn-sm btn-primary"
+                                title="<?php echo $this->quoteEscape($this->__('Login')) ?>"/><?php echo $this->__('Login') ?></button>
+                        <p class="required"><?php echo $this->__('* Required Fields') ?></p>
                     </div>
                 </form>
             <?php endif; ?>
+            </div>
         </div>
-        <div class="bottom"></div>
     </div>
 </div>
+<script>
+  jQuery(function(){
+    jQuery('#modalLogin').modal('show')
+  })
+</script>
